# Fraud-Detector

./: .gitattributes  .gitignore  README.md  airflow.cfg  config.ini  pyproject.toml
.github/workflows/: pipeline.yml
data/: Phishing_Emails.csv  Social_Engineering_Emails.csv  fraud_detector_data.csv
detector/: data_loader.py  labeler.py  modeler.py  preprocessor.py
ethics/: base.py  diff_privacy.py  differential_privacy.py
notebooks/: Fraud Detector Distribution.ipynb  Result distribution and analysis.ipynb  bert_base.ipynb  bert_differential_privacy.ipynb  data_explorer.ipynb  differential_privacy.ipynb  distilbert_differential_privacy.ipynb  homomorphic (1).ipynb  lda_analysis.ipynb  lr_base.ipynb  lr_differential_privacy.ipynb  modeler.ipynb  nb_base.ipynb  nb_differential_privacy.ipynb  rf_differential_privacy.ipynb
pipelines/: differential_privacy_trainer.py  distilbert_trainer.py  logistic_regression_trainer.py  naive_bayes_trainer.py  nn_trainer.py  random_forest_trainer.py  rf_differential_privacy_trainer.py  roberta_trainer.py  svm_trainer.py
pipelines/dags/: trainer.py
resources/: extenal_senders.json  internal_senders.json  sample_phishing_emails.csv  sample_social_engineering_emails.csv  unique_mails_from_sender.json
resources/Phishing-Model/: MLmodel  model.pkl  python_env.yaml
resources/SocEngg-Model/: MLmodel  conda.yaml  model.pkl  requirements.txt
resources/enron/sample/user 1/calendar/: 1.  10.  11.  12.  2.  3.  4.  5.  6.  7.  8.  9.
resources/enron/sample/user 2/lt_contracts/: 1.  10.  11.  12.  13.  14.  15.  16.  17.  18.  19.  2.  20.  21.  22.  23.  24.  25.  26.  27.  28.  29.  3.  30.  31.  4.  5.  6.  7.  8.  9.
resources/kmeans/: run_1_w_poi_and_sus_folders.txt  run_1_w_poi_and_sus_folders_10maxdf.txt
resources/lda_topics/: emails_in_topic0.txt  emails_in_topic1.txt  emails_in_topic2.txt  emails_in_topic3.txt  emails_in_topic4.txt  emails_in_topic5.txt  emails_in_topic6.txt  emails_in_topic7.txt  emails_in_topic8.txt  emails_in_topic9.txt
scripts/: airflow_server.sh
tests/: test_data_loader.py  test_labeler.py  test_modeler.py  test_preprocessor.py  test_utils.py
utils/: cleanup.py  data_fetch.py  util_data_loader.py  util_modeler.py  util_preprocessor.py
