[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ethical-fraud-detector"
version = "0.1.0"
description = "A upto-scale fraud-detector package with fine-tuned RoBERTa model trained with ethical considerations"
authors = ["Advaith Rao <advaith652@gmail.com>", "Falgun Malhotra <falgun.malhotra2@gmail.com", "Vanshita Gupta <vanshigupta04@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
jupyter = "^1.0.0"
regex = "*"
email = "6.0.0a1"
torch = "*"
scikit-learn = "*"
transformers = "*"
matplotlib = "*"

[tool.ethics]
#SMPC packages
crypten = "*"

[tool.modeling]
transformers = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
torchvision = "*"

