[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ethical-fraud-detector"
version = "0.1.0"
description = "A upto-scale fraud-detector package with fine-tuned RoBERTa model trained with ethical considerations"
authors = ["Advaith Rao <advaith652@gmail.com>", "Falgun Malhotra <falgun.malhotra2@gmail.com", "Vanshita Gupta <vanshigupta04@gmail.com"]

[tool.poetry.dependencies]
#main packages
python = "^3.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
jupyter = "^1.0.0"
mlflow = "*"

#detection packages
scikit-learn = "^1.3.0"
transformers = "*"
torch = "1.12.1"

#nlp packages
regex = "*"
#spacy = "^3.7.0"
#en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl" } 
nltk = "*"

#visualization packages
matplotlib = "*"
seaborn = "*"
wordcloud = "*"
plotly = "*"
gensim = "*"

#ethics packages
#crypten = "*"

#other packages
email = "6.0.0a1"
html2text = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
torchvision = "*"

